# rpm-builder

./: .gitignore  Cargo.toml  README.md  build-srpm.sh  rpm-builder.spec
.github/workflows/: release.yml
src/: main.rs
tests/: test.rs
